--- a/agency.html
+++ b/agency.html
@@ -97,7 +97,7 @@
             📈 As the <a href="https://www.grandviewresearch.com/industry-analysis/artificial-intelligence-ai-market" target="_blank" style="text-decoration:none">AI industry is set to soar to $1.81 trillion by 2030</a>, it's essential for your business to stay ahead.<br><br>🔝 MIT Sloan Management reports that <a href="https://web-assets.bcg.com/1e/4f/925e66794465ad89953ff604b656/mit-bcg-expanding-ai-impact-with-organizational-learning-oct-2020-n.pdf" target="_blank" style="text-decoration:none">9 in 10 businesses believe AI will give them an edge over their rivals</a>.<br><br>👉 Enhance customer service, generate leads, and propel growth with our tailored solutions.</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <a href="tel:+85268333398‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
+            <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
             <a target="_blank" style="text-decoration:none" href="mailto: agency@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
             <br><small>*Custom chatbots and AI solutions can be integrated with Airtable, Asana, Basecamp, Facebook Messenger, Github, Gmail, Hootsuite, Hubspot, Instagram, Intercom, Jira, LINE, Linear, Mailchimp, Microsoft Teams, Notion, Salesforce, Shopify, Slack, Stripe, Sunshine, Telegram, Trello, Twilio, Viber, Vonage, WhatsApp, Zapier, Zendesk, Zoom.</small>
@@ -219,7 +219,7 @@
             <p class="mb-5">
               We are your strategic partner in harnessing the full potential of ChatGPT for your business. Our expertise in seamlessly integrating AI chatbots into WhatsApp and web platforms ensures that you stay ahead of the competition and unlock new opportunities for success. <strong>Don't miss out on the AI revolution</strong>.
             </p>
-            <a href="tel:+85268333398‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
+            <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
             <a target="_blank" style="text-decoration:none" href="mailto: agency@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
 
@@ -245,7 +245,7 @@
               <li>🔧 <strong>Tailored support</strong>: Offer specialized guidance on the usage or maintenance of products and services based on customers' specific needs or purchase history.</li>
               <li>💌 <strong>Personalized marketing</strong>: Use custom data to send targeted promotions or news to customers based on their preferences or previous interactions.</li>
             </ul>
-            <a href="tel:+85268333398‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
+            <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
             <a target="_blank" style="text-decoration:none" href="mailto: agency@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
 
@@ -261,7 +261,7 @@
             <p>Tabmed, a leader in emerging technology, has developed innovative AI chatbots like <a href="kelly.html" target="_blank">Kelly</a>, <a href="kelly.html" target="_blank">Jason</a>, and <a href="kelly.html" target="_blank">Kenneth</a> to educate the Hong Kong population on sexual, physical, and mental health. We're eager to collaborate with your business to boost growth by integrating AI-powered chatbots into WhatsApp, FaceBook Messenger or your website for exceptional customer service and lead generation.</p>
             <p>Fundamentally at our core, we recognize the importance of outstanding customer experience for your business's success. Our bespoke ChatGPT solutions are tailored to meet your specific requirements, ensuring that our chatbots deliver valuable information and support while remaining engaging and accessible.</p>
             <p>Reach out to us to explore how ChatGPT can elevate your business and fulfill your unique goals. Our team is devoted to crafting a captivating and engaging brand experience for your customers.</p>
-            <a href="tel:+85268333398‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
+            <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
             <a target="_blank" style="text-decoration:none" href="mailto: agency@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
 
@@ -379,7 +379,7 @@
 
           <h1>Tabmed Empowers Your Oraganisation with AI Automations & Solutions</h1>
           <p class="mb-3">Tabmed is not just an AI automation agency; we are your strategic partner in harnessing the power of cutting-edge AI technologies to drive business growth and efficiency through chatbots and automation. </p>
-          <a href="tel:+85268333398‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
+          <a href="tel:+85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
           <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
           <a target="_blank" style="text-decoration:none" href="mailto: agency@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
        </div>
@@ -469,7 +469,7 @@
               <div class="col-lg-6 info">
                 <i class="bx">☎️</i>
                 <h4>Call Us</h4>
-                <strong><a href="tel:+85268333398‬">+852 6833 3398‬</a></strong><br>
+                <strong><a href="tel:+85269025557‬">+852 6902 5557‬</a></strong><br>
               </div>
               <div class="col-lg-6 info">
                 <i class="bx">📧</i>
@@ -510,7 +510,7 @@
             <h3>tabmed.</h3>
             <p>
               Build Your Custom ChatGPT for Education, Healthcare, Support, Training & Research<br><br>
-              <strong>📞 Call Us:<a href="tel:+85268333398‬">  +852 6833 3398‬</a></strong><br>
+              <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6902 5557/a></strong><br>
               <strong>📧 Email Us:<a href="mailto: info@tabmed.hk">  info@tabmed.hk</a></strong><br>
               <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
               <div class="social-links mt-3">
