--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <h3>tabmed.</h3>
             <p>
               Empowering Innovation in Healthcare & Education Through AI: Your Partner for Automation Solutions, Custom Chatbots, and Voice-enabled Roleplay Stimulators.<br><br>
-              <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6833 3398‬</a></strong><br>
+              <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6902 5557</a></strong><br>
               <strong>📧 Email Us:<a href="mailto: info@tabmed.hk">  info@tabmed.hk</a></strong><br>
               <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
               <div class="social-links mt-3">
