--- a/pricing.html
+++ b/pricing.html
@@ -280,7 +280,7 @@
             <h3>tabmed.</h3>
             <p>
               Build Your Custom ChatGPT for Education, Healthcare, Support, Training & Research<br><br>
-              <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6833 3398‬</a></strong><br>
+              <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6902 5557</a></strong><br>
               <strong>📧 Email Us:<a href="mailto: tabmedhk@gmail.com">  info@tabmed.hk</a></strong><br>
               <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
               <div class="social-links mt-3">
