--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -100,14 +100,14 @@
         <div class="row">
           <div class="col-lg-7 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
             <div>
-              <h1 class="text-white">🚀 PDF2Anki</h1>
+              <a href="https://www.producthunt.com/posts/pdf2anki?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-pdf2anki" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=405278&theme=light" alt="Pdf2Anki - Pdf&#0032;to&#0032;Anki&#0032;flashcards&#0032;made&#0032;automatic | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+              <h1 class="text-white mt-2">🚀 PDF2Anki</h1>
 
               <h2 class="text-white">Converts PDF files such as lecture slides, notes and PPTs into a .txt file that can be imported into Anki and converted into flashcards automatically. </h2>
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
               <br><small class="text-light">Thanks for joining our private beta!</small>
               <br><small class="text-light">Save this domain www.tabmed.hk/pdf2anki-beta for future use.</small>
-              <br><small class="text-light">Support future development and keep PDF2Anki for free forever by donating us a coffee: </small>
               <div class="mt-3 mb-3"><script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="tabmed" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script></div>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
               <a href="https://forms.gle/3JFj4e4yVgzqTvJw9" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Feature Request / Bug Report for PDF2Anki</button></a>
@@ -193,8 +193,7 @@
               <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
               <div class="social-links mt-3">
                 <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+
               </div>
             </p>
           </div>
@@ -202,9 +201,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>🧠 MakeGPT</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Course Mentor & Student Companion</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Documentation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">24/7 Customer Support</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="makegpt">Course Mentor & Student Companion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="makegpt">Documentation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="makegpt">24/7 Customer Support</a></li>
 
             </ul>
           </div>
@@ -212,11 +211,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>💬 Dialoguify</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Patient Stimulation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Language Learning</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Legal and Argument</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Pitching & Negotiation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Interview Practice</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Patient Stimulation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Language Learning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Legal and Argument</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Pitching & Negotiation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Interview Practice</a></li>
             </ul>
           </div>
 
