--- a/pdf2anki.html
+++ b/pdf2anki.html
@@ -100,6 +100,7 @@
         <div class="row">
           <div class="col-lg-7 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1">
             <div>
+              <a href="https://www.producthunt.com/posts/pdf2anki?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-pdf2anki" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=405278&theme=light" alt="Pdf2Anki - Pdf&#0032;to&#0032;Anki&#0032;flashcards&#0032;made&#0032;automatic | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
               <h1 class="text-white">🚀 PDF2Anki</h1>
 
               <h2 class="text-white">Converts PDF files such as lecture slides, notes and PPTs into a .txt file that can be imported into Anki and converted into flashcards automatically. </h2>
@@ -228,8 +229,6 @@
               <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
               <div class="social-links mt-3">
                 <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </p>
           </div>
@@ -237,9 +236,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>🧠 MakeGPT</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="jason.html">Course Mentor & Student Companion</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Documentation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="kelly.html">24/7 Customer Support</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="makegpt">Course Mentor & Student Companion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="makegpt">Documentation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="makegpt">24/7 Customer Support</a></li>
 
             </ul>
           </div>
@@ -247,11 +246,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>💬 Dialoguify</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Patient Stimulation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Language Learning</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Legal and Argument</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Pitching & Negotiation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Interview Practice</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Patient Stimulation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Language Learning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Legal and Argument</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Pitching & Negotiation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dialoguify">Interview Practice</a></li>
             </ul>
           </div>
 
@@ -274,7 +273,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright 2023 <strong><span>Tabmed Limited</span></strong>. All Rights Reserved.
+        &copy; Copyright 2023 <strong><span>Tabmed</span></strong>. All Rights Reserved.
       </div>
       <!-- <div class="credits">
         < All the links in the footer should remain intact. -->
