--- a/index.html
+++ b/index.html
@@ -415,6 +415,9 @@
               <strong>📞 Call Us:<a href="tel:+85269025557">  +852 6902 5557</a></strong><br>
               <strong>📧 Email Us:<a href="mailto: info@tabmed.hk">  info@tabmed.hk</a></strong><br>
               <strong>📱 Instagram Us:</strong><a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram">  <strong>@tabmedhk</a></strong><br>
+              <a href="privacy">Privacy Policy</a><br>
+              <a href="terms">Terms & Conditions</a>
+
               <div class="social-links mt-3">
                 <a href="https://www.instagram.com/tabmedhk/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
               </div>
