redirect added to pdf2anki

--- a/pdf2anki.html
+++ b/pdf2anki.html
@@ -106,8 +106,8 @@
               <h2 class="text-white">Converts PDF files such as lecture slides, notes and PPTs into a .txt file that can be imported into Anki and converted into flashcards automatically. </h2>
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-              <a href="https://mailchi.mp/f5ac16af8b1a/pdf2anki" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Join Private Beta Waitlist</button></a>
-              <br><small class="text-light">Try a pre-release demo by joining our private beta waitlist above.</small>
+              <a href="https://pdf2-anki.com" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Try Now For Free</button></a>
+              <br><small class="text-light">🥳 We are now out of private beta! Save hours of your time by trying out PDF2Anki for free above! 👆</small>
 
             </div>
           </div>
