--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -106,9 +106,9 @@
               <h2 class="text-white">Converts PDF files such as lecture slides, notes and PPTs into a .txt file that can be imported into Anki and converted into flashcards automatically. </h2>
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-              <br><small class="text-light">Thanks for joining our private beta!</small>
-              <br><small class="text-light">Save this domain www.tabmed.hk/pdf2anki-beta for future use.</small>
-              <div class="mt-3 mb-3"><script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="tabmed" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script></div>
+              <br><small class="text-light">Thanks for joining our private beta!</small><br><br>
+              <a href="https://app.pdf2-anki.com" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Go To PDF2Anki</button></a><br>
+              <br><small class="text-light">🥳 We are now out of private beta! Save hours of your time by trying out PDF2Anki for free above! 👆</small><br><br>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
               <a href="https://forms.gle/3JFj4e4yVgzqTvJw9" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Feature Request / Bug Report for PDF2Anki</button></a>
 
@@ -127,25 +127,20 @@
 
     </section>
 
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
 
       <div class="section-title">
 
-        <h1>👇 Pre-release Demo</h1>
-        <small><a href="https://student.tabmed.hk/" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" style="text-decoration:none"><u>Demand is very high guys! 🤯 Press here to open our alternative web app if the app below is not working.</u></a></small>
+        <h1>🥳 We are now out of private beta!</h1><br>
+        <strong><a href="https://app.pdf2-anki.com" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" style="text-decoration:none"><u>Click here to direct to PDF2Anki Launch Version.</u></a></strong>
 
-        <iframe
-          src="https://pdf2anki.streamlit.app/?embed=true&embed_options=light_theme"
-          height="1200"
-          style="width:100%;border:none;"
-        ></iframe>
      </div>
 
 
 
     </div>
     <div  class="container">
-      <a href="https://forms.gle/3JFj4e4yVgzqTvJw9" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Feature Request / Bug Report for PDF2Anki</button></a>
+      <a href="https://app.pdf2-anki.com" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Go To PDF2Anki</button></a>
       <h4 class ="mt-5">Change Log</h3>
       <p>
         19 July 2023 - Added Spanish, French, German, Traditional and Simplified Chinese support (might be still buggy for non-english languages)
