changed pdf2anki beta page

--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -107,7 +107,7 @@
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
               <br><small class="text-light">Thanks for joining our private beta!</small><br><br>
-              <a href="https://app.pdf2-anki.com" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Go To PDF2Anki</button></a><br>
+              <a href="https://pdf2-anki.com" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Go To PDF2Anki</button></a><br>
               <br><small class="text-light">🥳 We are now out of private beta! Save hours of your time by trying out PDF2Anki for free above! 👆</small><br><br>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
               <a href="https://forms.gle/3JFj4e4yVgzqTvJw9" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Feature Request / Bug Report for PDF2Anki</button></a>
@@ -132,7 +132,7 @@
       <div class="section-title">
 
         <h1>🥳 We are now out of private beta!</h1><br>
-        <strong><a href="https://app.pdf2-anki.com" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" style="text-decoration:none"><u>Click here to direct to PDF2Anki Launch Version.</u></a></strong>
+        <strong><a href="https://pdf2-anki.com" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" style="text-decoration:none"><u>Click here to direct to PDF2Anki Launch Version.</u></a></strong>
 
      </div>
 
@@ -140,7 +140,7 @@
 
     </div>
     <div  class="container">
-      <a href="https://app.pdf2-anki.com" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Go To PDF2Anki</button></a>
+      <a href="https://pdf2-anki.com" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Go To PDF2Anki</button></a>
       <h4 class ="mt-5">Change Log</h3>
       <p>
         19 July 2023 - Added Spanish, French, German, Traditional and Simplified Chinese support (might be still buggy for non-english languages)
